--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -30,13 +30,20 @@ services:
       context: ..
       dockerfile: ./docker/Dockerfile
       args:
+        CACHE_EXCHANGE_RATES_PERIOD: ""
+        API_V1_READ_METHODS_DISABLED: "false"
+        DISABLE_WEBAPP: "false"
+        API_V1_WRITE_METHODS_DISABLED: "false"
+        CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED: ""
+        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
+        ADMIN_PANEL_ENABLED: ""
         RELEASE_VERSION: 7.0.0
     links:
       - db:database
     environment:
         ETHEREUM_JSONRPC_HTTP_URL: http://89.38.97.158:8545/
         ETHEREUM_JSONRPC_TRACE_URL: http://89.38.97.158:8545/
-        ETHEREUM_JSONRPC_WS_URL: ws://89.38.97.158:8545/
+        ETHEREUM_JSONRPC_WS_URL: wss://89.38.97.158:8545/
         CHAIN_ID: '159'
 
   nft_media_handler:
