--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -15,3 +15,10 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=false
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=rgb(000, 000, 000)
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, rgb(184, 255, 101) 80%, rgb(205, 233, 144) 40%)
+NEXT_PUBLIC_NETWORK_LOGO=https://soarxupload.blr1.digitaloceanspaces.com/logo/logo.svg
+NEXT_PUBLIC_NETWORK_LOGO_DARK=https://soarxupload.blr1.digitaloceanspaces.com/logo/logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://soarxupload.blr1.digitaloceanspaces.com/logo/soarxlogo.svg
+NEXT_PUBLIC_NETWORK_ICON_DARK=https://soarxupload.blr1.digitaloceanspaces.com/logo/soarxlogo.svg
+NEXT_PUBLIC_OG_DESCRIPTION=soarX BlockChain is one of the leading blockchain
