comment the changes

--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,24 +1,21 @@
-NEXT_PUBLIC_API_HOST=soarxscan.org
-NEXT_PUBLIC_API_PROTOCOL=https
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Soarx chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Soarx chain
+NEXT_PUBLIC_API_HOST=localhost
+NEXT_PUBLIC_API_PROTOCOL=http
+NEXT_PUBLIC_STATS_API_HOST=http://89.38.97.158:8545/
+NEXT_PUBLIC_NETWORK_NAME=GETH
+NEXT_PUBLIC_NETWORK_SHORT_NAME=GETH
 NEXT_PUBLIC_NETWORK_ID=159
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Soarx
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=Soarx
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=OCash
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=OCASH
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=soarxscan.org
-NEXT_PUBLIC_APP_PROTOCOL=https
-NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
-NEXT_PUBLIC_IS_TESTNET=false
-NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
-NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
-NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=rgb(000, 000, 000)
-NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, rgb(184, 255, 101) 80%, rgb(205, 233, 144) 40%)
-NEXT_PUBLIC_NETWORK_LOGO=https://soarxupload.blr1.digitaloceanspaces.com/logo/logo.svg
-NEXT_PUBLIC_NETWORK_LOGO_DARK=https://soarxupload.blr1.digitaloceanspaces.com/logo/logo.svg
-NEXT_PUBLIC_NETWORK_ICON=https://soarxupload.blr1.digitaloceanspaces.com/logo/soarxlogo.svg
-NEXT_PUBLIC_NETWORK_ICON_DARK=https://soarxupload.blr1.digitaloceanspaces.com/logo/soarxlogo.svg
-NEXT_PUBLIC_OG_DESCRIPTION=soarX BlockChain is one of the leading blockchain
+NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/featured-networks/eth-goerli.json
+NEXT_PUBLIC_APP_HOST=localhost
+NEXT_PUBLIC_APP_PROTOCOL=http
+NEXT_PUBLIC_HOMEPAGE_CHARTS="['daily_txs']"
+NEXT_PUBLIC_VISUALIZE_API_HOST=http://0.0.0.0:8090
+NEXT_PUBLIC_IS_TESTNET='true'
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/network-logos/goerli.svg
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/blockscout/frontend-configs/main/configs/network-icons/goerli.svg
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND="radial-gradient(103.03% 103.03% at 0% 0%, rgba(183, 148, 244, 0.8) 0%, rgba(0, 163, 196, 0.8) 100%)"
+NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR="rgb(255, 255, 255)"
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL='ws'
